Undo alignment fix

--- a/src/next-app/styles/components/Navbar.module.css
+++ b/src/next-app/styles/components/Navbar.module.css
@@ -61,7 +61,7 @@
 }
 
 .profile-btn-container {
-  display: flex;
+  position: relative;
 }
 
 .profile-btn {
